--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script>document.addEventListener('DOMContentLoaded', function() { window.xeScribble = new Scribble({"pen_color":["#FF0000"],"pen_size":3,"eraser_size":30,"palette":[]}) })</script>
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view/tile-view.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x4f369d9a4bd4e14b8f17a8b3286d03a","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x09b61278e5a4ee4b9add83c180a1214","expires":1}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -38,7 +38,7 @@ class: center, middle, inverse, title-slide
 layout: true
   
 &lt;div class="my-footer"&gt;&lt;span&gt;
-Seminários em Bioinformática 27/06/2022 - &lt;a href="https://github.com/ElizaAlfaro"&gt;Elizabeth Alfaro-Espinoza&lt;/a&gt;
+Seminários em Bioinformática &lt;a href="https://seminarios-fluxprt.netlify.app/"&gt;27/06/2022&lt;/a&gt; - &lt;a href="https://github.com/ElizaAlfaro"&gt;Elizabeth Alfaro-Espinoza&lt;/a&gt;
 &lt;/span&gt;&lt;/div&gt;
 
 
@@ -183,14 +183,6 @@ class: middle
 --- guest2021: gu3st
 ```
 
----
-class: middle
-## FluxPRT
-
-<div class="shareagain" style="min-width:300px;margin:1em auto;">
-<iframe src="http://www.flux2.luar.dcc.ufmg.br" width="1600" height="700" style="border:2px solid currentColor;" loading="lazy" allowfullscreen></iframe>
-<script>fitvids('.shareagain', {players: 'iframe'});</script>
-</div>
 
 ---
 class: middle
@@ -268,10 +260,10 @@ class: middle
 
 # Relatório
 
-<div class="shareagain" style="min-width:300px;margin:1em auto;max-width:80%;">
-<iframe src="https://github.com/ElizaAlfaro/seminarios_01072022/blob/master/docs/img/result/relatorio.pdf" width="1600" height="900" style="border:2px solid currentColor;" loading="lazy" allowfullscreen></iframe>
-<script>fitvids('.shareagain', {players: 'iframe'});</script>
-</div>
+&lt;div class="figure" style="text-align: center"&gt;
+&lt;img src="img/result/relatorio.png" alt="Relatório da atividade de Obtenção. Fonte: Autoral." width="90%" /&gt;
+&lt;p class="caption"&gt;Relatório da atividade de Obtenção. Fonte: Autoral.&lt;/p&gt;
+&lt;/div&gt;
 
 ---
 class: middle
@@ -337,10 +329,8 @@ class: middle
 
 
 .pull-right[
-*Feito com 💙 usando [Xaringan](https://github.com/yihui/xaringan) e [Kunoichi](https://github.com/emitanaka/ninja-theme).*
+#####Feito com 💙 usando [Xaringan](https://github.com/yihui/xaringan) e [XaringanExtra](https://github.com/gadenbuie/xaringanExtra).
 ]
-
-xaringan::inf_mr()
 
 ---
 class: inverse, middle
