--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script>document.addEventListener('DOMContentLoaded', function() { window.xeScribble = new Scribble({"pen_color":["#FF0000"],"pen_size":3,"eraser_size":30,"palette":[]}) })</script>
     <link href="libs/tile-view/tile-view.css" rel="stylesheet" />
     <script src="libs/tile-view/tile-view.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x09b61278e5a4ee4b9add83c180a1214","expires":1}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"a8149d715edd4f5e936453d2d079ac98","expires":1}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -293,7 +293,7 @@ class: middle
 |Workflows complexos|Estándares internacionais|Guia Interativo|Versão inglês|Análise de dados|
 |:-:|:-:|:-:|:-:|:-:|:-:|
 |&lt;img src="https://cdn-icons-png.flaticon.com/512/1574/1574138.png"&lt;/&gt;|&lt;img src="https://cdn-icons-png.flaticon.com/512/1156/1156677.png"&lt;/&gt;|&lt;img src="img/nextstep/userGuide.png"&lt;/&gt;|&lt;img src="https://cdn-icons-png.flaticon.com/512/5511/5511398.png"&lt;/&gt;|&lt;img src="https://cdn-icons-png.flaticon.com/512/3043/3043574.png"&lt;/&gt;|
-|Cada membro|MIAPE, BPL, ISO17904|Todas as atividades|Workflow e Guia Interivo|Integrar ferramentas|
+|Mais funcionalidades|MIAPE, BPL, ISO17904|Todas as atividades|Workflow e Guia Interivo|Integrar ferramentas|
 
 
 .pull-right[
